--- a/index.html
+++ b/index.html
@@ -46,29 +46,39 @@ html, body {
 
 /* ================= SEGUNDA TELA ================= */
 #formulario {
+  position: relative;
   opacity: 0;
   pointer-events: none;
   min-height: 100vh;
   width: 100%;
-
-  /* 🔹 FUNDO COM DUAS IMAGENS CONTÍNUAS */
-  background-image: 
-    url("topo.png"),
-    url("baixo.png");
-
-  background-repeat: no-repeat, no-repeat;
-
-  /* topo.png no topo, baixo.png logo abaixo, sem espaço */
-  background-position: top, bottom;
-  background-size: 100% auto, 100% auto;
-
   display: flex;
   justify-content: center;
   align-items: flex-start;
-
   padding-top: 90px;
-  padding-bottom: 90px; /* mesmo espaço que topo */
+  padding-bottom: 90px;
   transition: opacity 2.2s ease;
+}
+
+/* 🔹 FUNDO COM DUAS IMAGENS CONTÍNUAS SEM GAP */
+#fundo-topo, #fundo-baixo {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  z-index: 0;
+}
+
+#fundo-topo {
+  top: 0;
+  height: 50%;
+  background: url('topo.png') no-repeat top center;
+  background-size: cover;
+}
+
+#fundo-baixo {
+  top: 50%;
+  height: 50%;
+  background: url('baixo.png') no-repeat bottom center;
+  background-size: cover;
 }
 
 #formulario.ativo {
@@ -84,10 +94,10 @@ html, body {
   padding: 38px 26px 40px;
   border-radius: 22px;
   box-shadow: 0 18px 45px rgba(0,0,0,0.28);
-
   transform: translateY(140px);
   opacity: 0;
   transition: transform 1.8s ease, opacity 1.8s ease;
+  z-index: 1;
 }
 
 .card h2 {
@@ -157,6 +167,10 @@ button {
 
 <!-- SEGUNDA TELA -->
 <div id="formulario">
+  <!-- 🔹 Imagens de fundo contínuas -->
+  <div id="fundo-topo"></div>
+  <div id="fundo-baixo"></div>
+
   <div class="card" id="card">
     <h2>Visitas Externas</h2>
 
